Fixed bugs on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -51,7 +51,6 @@
 
 .title-header {
   color: #222;
-  text-shadow: 0px 2px 3px #555;
 }
 
 .picture {
